force-app/main/default/objects/custom_object_raul__c/custom_object_raul__c.object-meta.xml
<CustomObject
     >
    <historyRetentionPolicy n1:nil="true" />
    <label>custom_object_raul</label>
    <nameField>
        <label>custom_object_raul Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>custom_object_raul</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>