force-app/main/default/objects/custom_object_raul__c/fields/custom_field_raul_1__c.field-meta.xml
<CustomField>
    <fullName>custom_field_raul_1__c</fullName>
    <label>custom_field_raul_1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>