force-app/main/default/objects/custom_object_raul__c/fields/custom_field_raul_2__c.field-meta.xml
<CustomField>
    <fullName>custom_field_raul_2__c</fullName>
    <label>custom_field_raul_2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>