force-app/main/default/objects/custom_object_raul__c/fields/custom_field_raul_3__c.field-meta.xml
<CustomField>
    <fullName>custom_field_raul_3__c</fullName>
    <label>custom_field_raul_3</label>
    <length>33</length>
    <type>Text</type>
</CustomField>